<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.ProfileSayaActivity"
    tools:showIn="@layout/activity_profile_saya">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/TextSpec.Field"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/info" />

        <TextView
            android:id="@+id/tv_nip"
            style="@style/TextSpec.Value"
            android:textSize="18sp"
            tools:text="130517100" />

        <TextView
            style="@style/TextSpec.Gray"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/nip" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_nama"
            style="@style/TextSpec.Value"
            android:textSize="18sp"
            tools:text="Nazruddin Safaat H" />

        <TextView
            style="@style/TextSpec.Gray"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/nama" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_imei"
            style="@style/TextSpec.Value"
            android:textSize="18sp"
            tools:text="35872635215" />

        <TextView
            style="@style/TextSpec.Gray"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/imei" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_jk"
            style="@style/TextSpec.Value"
            android:textSize="18sp"
            tools:text="Laki-Laki" />

        <TextView
            style="@style/TextSpec.Gray"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/jenis_kelamin" />


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
